# NumericalMethodsInCpp

./: CMakeLists.txt  main.cpp  readMe.md
src/: sim.hpp  systems.hpp
src/dynamics/: double_integrator_dynamics.hpp
src/phugoid/: phugoid_dynamics.hpp
src/ui/: dashboard_application.hpp
src/ui/dashboard/: window.hpp
